Fix overflow

--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -14,6 +14,11 @@
     margin: 30px auto;
 }
 
+.show-title, .show-subtitle, .show-body {
+    width: 700px;
+    overflow-wrap: break-word;
+}
+
 .show-title {
     font: bolder;
     font-size: 40px;
