--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -46,12 +46,16 @@
     font-size: 22px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 10px 0;
+    margin-right: 120px;
+    overflow-wrap: break-word;
 }
 
 .user-story-subtitle {
     font-size: 16px;
     color: gray;
     margin: 10px 0;
+    margin-right: 120px;
+    overflow-wrap: break-word;
 }
 
 .edit-story-btn {
